--- a/spec/dummy/config/database.yml
+++ b/spec/dummy/config/database.yml
@@ -19,4 +19,4 @@ development:
 test:
   <<: *default
   database: db/test.sqlite3
-  database: 'kari_test_development'
+  database: 'kari_dummy_test'
