--- a/.github/workflows/kari.yml
+++ b/.github/workflows/kari.yml
@@ -11,11 +11,12 @@ jobs:
     runs-on: ubuntu-latest
 
     services:
-      postgres: image: postgres:12
-      env:
-        POSTGRES_USER: postgres
-        POSTGRES_PASSWORD: postgres
-      ports: ['5432:5432']
+      postgres:
+        image: postgres:12
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+        ports: ['5432:5432']
 
     steps:
       - uses: actions/checkout@v3
