Show full rspec backtrace

--- a/.github/workflows/kari.yml
+++ b/.github/workflows/kari.yml
@@ -40,4 +40,4 @@ jobs:
         run: bundle exec rake db:prepare
 
       - name: Run tests
-        run: bundle exec rspec
+        run: bundle exec rspec --backtrace
