--- a/.github/workflows/kari.yml
+++ b/.github/workflows/kari.yml
@@ -13,6 +13,7 @@ jobs:
     strategy:
       matrix:
         gemfile: [ rails_6_1, rails_7_0 ]
+        ruby: [ 2.7, 3.1 ]
 
     env:
       DATABASE_URL: postgres://postgres:postgres@localhost:5432
@@ -32,7 +33,7 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 2.7.5
+          ruby-version: ${{ matrix.ruby }}
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
 
       - name: Setup database
