--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,9 +1,6 @@
-require:
-  - rubocop-rails
-  - rubocop-rspec
-
 AllCops:
-  TargetRubyVersion: 2.6
+  TargetRubyVersion: 2.7
+  DisabledByDefault: true
 
 Style/StringLiterals:
   Enabled: true
