--- a/.github/workflows/kari.yml
+++ b/.github/workflows/kari.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        gemfile: [ rails_6_1, rails_7_0, , rails_7_1 ]
+        gemfile: [ rails_6_1, rails_7_0, rails_7_1 ]
         ruby: [ 2.7, 3.1, 3.2 ]
 
     env:
