--- a/.github/workflows/kari.yml
+++ b/.github/workflows/kari.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
         gemfile: [ rails_6_1, rails_7_0 ]
-        ruby: [ 2.7, 3.1 ]
+        ruby: [ 2.7, 3.1, 3.2 ]
 
     env:
       DATABASE_URL: postgres://postgres:postgres@localhost:5432
